[tool.poetry]
name = "swatchblade"
version = "0.1.0"
description = "A Swiss army knife for Subscription Watch tasks"
authors = ["Alex Wood <awood@redhat.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
swatchblade = "swatchblade.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.1"
textual = "^0.10.1"
requests = "^2.28.2"
crc-bonfire = "^4.12.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
textual = {extras = ["dev"], version = "^0.10.1"}
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
]

[envs.lint.scripts]
format = "black swatchblade tests"
check = "black --check swatchblade tests"
typing = "mypy swatchblade"
